[package]
name = "japlj"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
rand = "0.9.2"
rand_pcg = "0.9.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
